main con columna7

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <main>
+    <main class="container col-md-7">
       <div class="container-fluid">
         <div class="main__header">
           <ul class="nav">
@@ -63,7 +63,6 @@
                   >
                     <p class="card-text">TodayIlearned</p>
                     <p class="card-text">#programming</p>
-                    <p class="card-text">#opensource</p>
                     <p class="card-text">#github</p>
                   </div>
                   <div
@@ -141,7 +140,6 @@
                   >
                     <p class="card-text">OnlineLearning</p>
                     <p class="card-text">#JavaScript</p>
-                    <p class="card-text">#3monthschallenge</p>
                     <p class="card-text">#becomingaDev</p>
                   </div>
                   <div
