--- a/src/index.html
+++ b/src/index.html
@@ -2,55 +2,55 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../stylesheet/styles.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto de prueba</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../stylesheet/styles.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proyecto de prueba</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="icon">
-                <i></i>
-            </div>
-            <nav class="navbar bg-light">
-                <div class="container-fluid">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </nav>
-            <nav class="navbar bg-light">
-                <form class="container-fluid justify-content-start">
-                  <button class="btn btn-outline-success me-2" type="button">Main button</button>
-              
-                </form>
-              </nav>
-              
-
-
-        </nav>
-    </header>
-    <div class="container">
-        <div class="row">
-            <aside>
-
-            </aside>
-            <main>
-
-            </main>
-            <aside>
-
-            </aside>
+  <header>
+    <nav>
+      <div class="icon">
+        <i></i>
+      </div>
+      <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
-        <footer>
+      </nav>
+      <nav class="navbar bg-light">
+        <form class="container-fluid justify-content-start">
+          <button class="btn btn-outline-success me-2" type="button">Main button</button>
 
-        </footer>
+        </form>
+      </nav>
+
+
+
+    </nav>
+  </header>
+  <div class="container">
+    <div class="row">
+      <aside>
+
+      </aside>
+      <main>
+
+      </main>
+      <aside>
+
+      </aside>
+    </div>
+    <footer>
+      <p> comentario</p>
+    </footer>
 
 
 </body>
